--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <button>Click me!</button>
     <script type="text/javascript" src="script.js"></script>
-    <h1>SHOPPING LIST</h1>
+    <h1>Window SHOPPING LIST</h1>
     <ul>
         <li>BAG</li>
         <li>BOTTLE</li>
