--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script type="text/javascript" src="script.js"></script>
     <h1>SHOPPING LIST</h1>
     <ul>
-        <li>BAG</li>
+        <li>Hand Sanitizer</li>
         <li>BOTTLE</li>
         <li>BLANKET</li>
         <li>FOOD</li>
